Fixed bug that rendered certain pages invisible

--- a/src/app/components/roles/roles.component.css
+++ b/src/app/components/roles/roles.component.css
@@ -70,7 +70,7 @@
   .recruiter-button:active,
   .student-button:active {
     animation: 1s ease 0s infinite normal none shadow-pop-tr;
-    opacity: 1;
+    opacity: 100;
   }
   .vector-icon104 {
     position: relative;
@@ -138,7 +138,7 @@
     width: 100%;
     height: 800px;
     overflow: hidden;
-    opacity: 0;
+    opacity: 100;
     text-align: center;
     font-size: var(--font-size-11xl);
     color: var(--color-black);
