--- a/src/app/components/sign-up-student/sign-up-student.component.css
+++ b/src/app/components/sign-up-student/sign-up-student.component.css
@@ -6,18 +6,21 @@
   to {
     transform: translateX(0);
     opacity: 1;
-  }
+  }  
 }
+
 body {
   margin: 0;
   line-height: normal;
 }
+
 .vector-icon1 {
   position: relative;
   width: 16px;
   height: 31px;
   flex-shrink: 0;
 }
+
 .back-button {
   cursor: pointer;
   border: 0;
@@ -30,6 +33,7 @@ body {
   justify-content: flex-start;
   z-index: 0;
 }
+
 .sign-up-div2 {
   position: absolute;
   margin: 0 !important;
@@ -40,6 +44,7 @@ body {
   display: inline-block;
   z-index: 1;
 }
+
 .top-section-div {
   align-self: stretch;
   display: flex;
@@ -48,6 +53,7 @@ body {
   justify-content: flex-start;
   position: relative;
 }
+
 .ellipse-icon {
   position: relative;
   width: 113px;
@@ -55,6 +61,7 @@ body {
   flex-shrink: 0;
   object-fit: cover;
 }
+
 .profile-picture-div {
   align-self: stretch;
   display: flex;
@@ -62,6 +69,7 @@ body {
   align-items: center;
   justify-content: center;
 }
+
 .upload-picture-button {
   cursor: pointer;
   border: 0;
@@ -75,6 +83,7 @@ body {
   text-align: center;
   display: inline-block;
 }
+
 .change-profile-pic-div {
   align-self: stretch;
   height: 131px;
@@ -84,6 +93,7 @@ body {
   align-items: center;
   justify-content: flex-start;
 }
+
 .name-input,
 .name-input1 {
   border: 0;
@@ -92,6 +102,7 @@ body {
   flex-direction: row;
   box-sizing: border-box;
 }
+
 .name-input {
   align-self: stretch;
   display: flex;
@@ -99,9 +110,11 @@ body {
   align-items: flex-start;
   justify-content: flex-start;
 }
+
 .name-input1 {
   padding: var(--padding-2xs) var(--padding-2xs) 7.273291110992432px;
 }
+
 .name-input1,
 .name-select,
 .personal-div {
@@ -110,6 +123,7 @@ body {
   align-items: flex-start;
   justify-content: flex-start;
 }
+
 .name-select {
   border-radius: var(--br-3xs);
   background-color: var(--color-gray-100);
@@ -117,14 +131,17 @@ body {
   padding: var(--padding-2xs);
   box-sizing: border-box;
 }
+
 .personal-div {
   flex-direction: column;
   gap: var(--gap-11xl);
 }
+
 .content-div {
   flex: 1;
   gap: 53.36px;
 }
+
 .content-div,
 .main-section-div,
 .personal-details-div {
@@ -134,16 +151,19 @@ body {
   align-items: flex-start;
   justify-content: flex-start;
 }
+
 .personal-details-div {
   flex: 1;
   padding: var(--padding-4xl) 0;
   box-sizing: border-box;
 }
+
 .main-section-div {
   height: 671.02px;
   flex-shrink: 0;
   gap: var(--gap-9xl);
 }
+
 .edit-profile-div {
   flex: 1;
   position: relative;
@@ -153,6 +173,7 @@ body {
   text-align: center;
   display: inline-block;
 }
+
 .bottom-section-div,
 .button-primary2 {
   align-self: stretch;
@@ -161,6 +182,7 @@ body {
   align-items: center;
   cursor: pointer;
 }
+
 .button-primary2 {
   border: 0;
   padding: 9.491521835327148px;
@@ -169,17 +191,20 @@ body {
   flex-direction: row;
   justify-content: center;
 }
+
 .bottom-section-div {
   flex-direction: column;
   padding: var(--padding-6xl) 0 0;
   justify-content: flex-end;
 }
+
 .frame-div,
 .sign-up-student-div1 {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
 }
+
 .sign-up-student-div1 {
   align-self: stretch;
   border-radius: var(--br-lg);
@@ -188,6 +213,7 @@ body {
   box-sizing: border-box;
   align-items: flex-start;
 }
+
 .frame-div {
   position: absolute;
   width: 100%;
@@ -197,18 +223,20 @@ body {
   height: 800px;
   align-items: center;
 }
+
 .sign-up-student-div {
   position: relative;
   background-color: var(--color-white);
   width: 100%;
   height: 800px;
   overflow: hidden;
-  opacity: 0;
+  opacity: 100;
   text-align: center;
   font-size: var(--font-size-20xl);
   color: var(--color-black);
   font-family: var(--font-montserrat);
 }
+
 .sign-up-student-div.animate {
   animation: 1s ease 0s 1 normal forwards slide-in-right;
 }
@@ -235,3 +263,8 @@ body {
     }
   }
 }
+
+
+
+
+
